src/objects/Role_Team_Map__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Maps User Role to Sales Team

Key = RoleId</description>
    <fields>
        <fullName>Role_Name__c</fullName>
        <label>Role Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <label>Specialty</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Role Team Map</label>
</CustomObject>